--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A c4 implementation using pixi.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel": "babel --presets es2015 js/main.js -o build/main.bundle.js",
+    "start": "http-server",
+    "webpack": "webpack --watch"
   },
   "repository": {
     "type": "git",
