--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A c4 implementation using pixi.js",
   "main": "index.js",
   "scripts": {
-    "babel": "babel --presets es2015 js/main.js -o build/main.bundle.js",
     "start": "http-server",
-    "webpack": "webpack --watch"
+    "webpack": "webpack --watch",
+    "test": "tape -r ./build/main.js build/test.js | faucet"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,16 @@
   },
   "homepage": "https://github.com/cbrandolino/c4-es6-challenge#readme",
   "devDependencies": {
+    "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.4.3",
+    "faucet": "0.0.1",
+    "fs": "0.0.2",
     "http-server": "^0.8.5",
+    "phantomjs": "^2.1.2",
+    "tape": "^4.4.0",
     "webpack": "^1.12.12"
   }
 }
