--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "http-server",
     "webpack": "webpack --watch",
-    "test": "tape -r ./build/main.js build/test.js | faucet"
+    "test": "tape -r ./build/main.js build/test.js | faucet",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,13 @@
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
+    "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^4.0.0",
+    "eslint-plugin-react": "^3.16.1",
     "faucet": "0.0.1",
     "fs": "0.0.2",
     "http-server": "^0.8.5",
