--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "http-server",
-    "webpack": "webpack --watch",
-    "test": "tape -r ./build/main.js build/test.js | faucet",
+    "watch": "webpack --watch",
+    "watch-test": "webpack --watch --config ./webpack.test.config.js",
+    "test": "tape build/test.js | faucet",
     "lint": "eslint src"
   },
   "repository": {
@@ -24,6 +25,7 @@
     "babel-core": "^6.4.5",
     "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
+    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
     "eslint": "^1.10.3",
