--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fs": "0.0.2",
     "http-server": "^0.8.5",
     "phantomjs": "^2.1.2",
+    "pixi.js": "^3.0.9",
     "tape": "^4.4.0",
     "webpack": "^1.12.12"
   }
