--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "faucet": "0.0.1",
     "fs": "0.0.2",
     "http-server": "^0.8.5",
+    "json-loader": "^0.5.4",
     "phantomjs": "^2.1.2",
     "pixi.js": "^3.0.9",
     "tape": "^4.4.0",
