--- a/package.json
+++ b/package.json
@@ -36,10 +36,13 @@
     "file-loader": "^0.8.5",
     "fs": "0.0.2",
     "http-server": "^0.8.5",
+    "i": "^0.3.4",
     "json-loader": "^0.5.4",
+    "npm": "^3.6.0",
     "phantomjs": "^2.1.2",
     "pixi.js": "^3.0.9",
     "tape": "^4.4.0",
+    "tween.js": "^16.3.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.12"
   }
