--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
     "tween.js": "^16.3.4",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.12"
+  },
+  "dependencies": {
+    "alphabeta": "^1.0.0"
   }
 }
