--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
+    "clone": "^1.0.2",
     "debug": "^2.2.0",
     "eslint": "^1.10.3",
     "eslint-config-airbnb": "^4.0.0",
